# CornellBox

./: CMakeLists.txt  README.md
include/: BBox.h  BVH.h  Camera.h  IntersectionInfo.h  Material.h  Object.h  Ray.h  Renderer.h  Scene.h  Sphere.h  Triangle.h  glm_vec3_func.h
include/rand48/: erand48.inc
include/tiny_obj_loader/: tiny_obj_loader.h
res/: scene01.mtl  scene02.mtl
src/: BBox.cpp  BVH.cpp  Camera.cpp  Renderer.cpp  Scene.cpp  main.cpp
